# MailboxUltra

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  codecov.yml
.github/workflows/: ci.yml  release.yml  site.yml
docs/: README.md
icon/: AppIcon.icns
mac/: Info.plist  README.md  build-app-universal.sh  build-app.sh  build-dmg.sh
scripts/: README.md  install.sh  simulate.py
site/: build.mjs  cli-help.txt  package-lock.json  package.json
site/content/: 404.md  api.md  changelog.md  cli.md  comparison.md  configuration.md  contributing.md  index.md  install.md  logging.md  quick-start.md  relay.md  smtp.md  use-cases.md  web-ui.md
site/static/: style.css  theme.js
site/templates/: home.html  layout.html
site/templates/partials/: footer.html  nav.html
src/: app.rs  cli.rs  entrypoint.rs  lib.rs  main.rs  message.rs  output.rs  relay.rs  server.rs  settings.rs  smtp.rs  store.rs  ui.rs  update.rs
src/gui/: detail.rs  fonts.rs  help_window.rs  inbox.rs  mod.rs  native_html.rs  relay_window.rs  repaint.rs  settings_window.rs  theme.rs  toasts.rs  toolbar.rs  widgets.rs
src/gui/detail/: attachments.rs  headers.rs  html.rs  mod.rs  release.rs  source.rs  text.rs
tests/: e2e_tests.rs  server_tests.rs  settings_tests.rs  smtp_tests.rs  ui_tests.rs
tools/: icon-gen.rs
ui/: app.js  index.html  style.css
