[package]
name = "mailbox-ultra"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
description = "Local SMTP fake inbox as a native macOS app. Catch every email your app sends without ever delivering one."
authors = ["MPJHorner <matt@heyjodie.com>"]
license = "MIT"
repository = "https://github.com/MPJHorner/MailboxUltra"
homepage = "https://github.com/MPJHorner/MailboxUltra"
readme = "README.md"
keywords = ["smtp", "email", "mailpit", "mailhog", "developer-tools"]
categories = ["email", "development-tools::debugging"]

[lib]
name = "mailbox_ultra"
path = "src/lib.rs"

[[bin]]
name = "mailbox-ultra"
path = "src/main.rs"

[dependencies]
# Core (kept from the CLI era)
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
humansize = "2"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"  # used by relay.rs for AUTH PLAIN
mail-parser = "0.9"
url = "2"
addr = "0.15"

# Native GUI
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.34"
egui_extras = { version = "0.34", features = ["syntect"] }
directories = "6"
rfd = "0.17"
image = { version = "0.25", default-features = false, features = ["png"] }
open = "5"
raw-window-handle = "0.6"

# Native macOS HTML rendering for the HTML tab.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSObject",
    "NSString",
    "NSURL",
    "NSURLRequest",
    "NSGeometry",
    "NSValue",
    "NSThread",
    "objc2-core-foundation",
] }
objc2-core-foundation = { version = "0.3", features = ["CFCGTypes"] }
objc2-app-kit = { version = "0.3", features = [
    "NSView",
    "NSWindow",
    "NSResponder",
    "NSApplication",
] }
objc2-web-kit = { version = "0.3", features = [
    "WKWebView",
    "WKWebViewConfiguration",
    "WKPreferences",
    "WKNavigation",
    "WKNavigationAction",
    "WKNavigationDelegate",
    "WKWebpagePreferences",
    "block2",
    "objc2-app-kit",
] }
block2 = "0.6"

[dev-dependencies]
pretty_assertions = "1"
serial_test = "3"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1", "tokio1-rustls-tls", "builder"] }
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
